--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,11 +24,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest   # ✅ ensure pytest is installed
+          pip install pytest
 
   run-tests:
     runs-on: ubuntu-latest
     needs: install-dependencies
+    services:
+      mongo:
+        image: mongo:5.0
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd="mongosh --eval 'db.runCommand({ ping: 1 })'"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -45,6 +55,8 @@ jobs:
           pip install pytest
 
       - name: Run tests
+        env:
+          MONGO_URI: mongodb://localhost:27017/testdb
         run: pytest --maxfail=1 --disable-warnings -q
 
   build:
